--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.dema.versatile.flashlight"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 4
-        versionName "1.0.4"
+        versionCode 5
+        versionName "1.0.5"
         flavorDimensions "versionCode"
         /*ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a'    //只生成armv7的so
@@ -75,8 +75,14 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.airbnb.android:lottie:3.0.7'
     implementation 'com.google.firebase:firebase-core:17.2.1'
+    // Recommended: Add the Firebase SDK for Google Analytics.
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+
+    // Add the Firebase SDK for Crashlytics.
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta01'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     api 'com.jakewharton:butterknife:10.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
