--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,8 @@
             android:value="ef16c50a7b0749dab0fccfe9dae65fa2" />
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-2608933756752476~5697672677" />
+            android:value="ca-app-pub-9694242514382287~8215771217" />
+        <!--    android:value="ca-app-pub-2608933756752476~5697672677" />-->
         <!-- android:value="ca-app-pub-9195446338192028~1063508307" -->
 
 
